<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** This file is part of Danbooru Gallery
**
** Copyright 2011
**   - Victor Tseng <palatis@gmail.com>
**
** Danbooru Gallery is free software: you can redistribute it and/or modify
** it under the terms of the GNU General Public License as published by
** the Free Software Foundation, either version 3 of the License, or
** (at your option) any later version.
**
** Danbooru Gallery is distributed in the hope that it will be useful,
** but WITHOUT ANY WARRANTY; without even the implied warranty of
** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
** GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License
** along with Danbooru Gallery.  If not, see <http://www.gnu.org/licenses/>.
**/
-->
<resources>

    <!-- Application-wize -->
    <string name="app_name">Danbooru Gallery</string>
    <string name="app_name_preferences">Danbooru Gallery Preferences</string>
	 <string name="error_dialog_title">He\'s dead, Jim!</string>
	 <string name="error_dialog_message">An problem occurred in the program, please send an e-mail with\n\n\"%1$s\"\n\nas the attachment to %2$s.\n\nSorry for the inconvenience and appreciate your help for make this program better.</string>

    <!-- Main Activity -->
    <string name="main_loading_next_page">Loading next page...</string>
    <string name="main_fetch_reach_end">No more posts.</string>
    <string name="main_query">Tags: %1$s</string>
    <string name="main_download_dialog_title">Download this image?</string>

    <string name="main_menu_goto">Go to</string>
    <string name="main_menu_goto_page">Page...</string>
    <string name="main_menu_goto_tags">Tags...</string>
    <string name="main_menu_goto_reset_tags">Reset tags</string>
    <string name="main_menu_preferences">Preferences</string>
    <string name="main_menu_refresh">Refresh</string>

	 <string name="main_goto_page_dialog_title">Go to page...</string>

    <!-- View Image Activity -->
    <string name="view_image_infopane_message">Size: %1$dx%2$d\tAuthor: %3$s\nCreated At: %4$s</string>
    <string name="view_image_tags">Tags</string>
    <string name="view_image_download_failed">Download failed!</string>
    <string name="view_image_user_canceled">User canceled.</string>
    <string name="view_image_progress_message">Getting image size information...</string>

    <string name="view_image_menu_info">Picture Info</string>
    <string name="view_image_menu_tags">Tags</string>
    <string name="view_image_menu_share">Share</string>
	 <string name="view_image_menu_refresh">Refresh</string>
	 <string name="view_image_menu_download">Download</string>
	 <string name="view_image_menu_downloading">Download enqueued:\n%1$s</string>

	 <string name="view_image_menu_share_chooser_title">Share using...</string>
	 
	 <string name="view_image_longclick_back">Back</string>

    <!-- ViewImageInfoActivity -->
    <string name="view_image_info_nulltime">&gt;no time info&lt;</string>
    <string name="view_image_info_post_info">Size: %1$dx%2$d\nAuthor: %3$s\nCreated At: %4$s\nComments:</string>

	 <!-- Preferences -->
	 <string name="preferences_category_hosts">Hosts</string>
	 <string name="preferences_hosts_select">Select host</string>
	 <string name="preferences_hosts_selected_host">Current: %1$s</string>
	 <string name="preferences_hosts_manage">Manage hosts</string>
	 <string name="preferences_hosts_manage_description">Click here to manage your hosts</string>
	 <string name="preferences_hosts_manage_category_new">New Host</string>
	 <string name="preferences_hosts_manage_new">New host...</string>
	 <string name="preferences_hosts_manage_new_description">Click here to add a new host</string>
	 <string name="preferences_hosts_manage_category_manage">Manage Host</string>

	 <string name="preferences_hosts_dialog_title">Host</string>
	 <string name="preferences_hosts_dialog_host_name">An name for this host:</string>
	 <string name="preferences_hosts_dialog_url">The URL of the host:</string>
	 <string name="preferences_hosts_dialog_url_example">http://</string>
	 <string name="preferences_hosts_dialog_button_delete">Delete</string>
	 <string name="preferences_hosts_dialog_api">Select an API</string>

    <string name="preferences_hosts_dialog_delete_confirm_title">Delete host</string>
	 <string name="preferences_hosts_dialog_delete_confirm_message">Host: %1$s\nURL: %2$s\n\nAre you sure you want to delete this host?</string>

	 <string name="preferences_category_options">Options</string>
    <string name="preferences_options_rating">Rating</string>
	 <string name="preferences_options_rating_description">Filter the posts by ratings</string>
    <string name="preferences_options_page_limit">Posts per page</string>
	 <string name="preferences_options_page_limit_description">Posts to retrieve at once</string>
	 <string name="preferences_options_aggressive_prefetch">Aggressive Prefetch</string>
	 <string name="preferences_options_aggressive_prefetch_description">Prefetch preview images aggressively.<b>This may cost you a LOT of bandwidth, use with caution.</b></string>
	 <string name="preferences_options_high_quality_image">High Quality Images</string>
	 <string name="preferences_options_high_quality_image_description">By default, it only downloads lower quality sample image in view image mode. Enable this if you want the higher quality images (bigger files) instead.</string>

	 <string name="preferences_category_about">About</string>
	 <string name="preferences_about_copyright">Copyright (c) 2011</string>
	 <string name="preferences_about_author">Victor Tseng &lt;palatis@gmail.com&gt;\nhttp://code.google.com/p/danbooru-gallery-android</string>
	 <string name="preferences_about_version">Version</string>
	 <string name="preferences_about_version_description">No version informations</string>
	 <string name="preferences_about_license">License</string>
	 <string name="preferences_about_license_description">GNU General Public License</string>
	 <string name="preferences_about_license_dialog_title">GNU General Public License</string>
	 <string name="preferences_about_license_dialog_content">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>

    <!-- searchable -->
    <string name="search_hint">Search tags</string>
    <string name="search_settings_description">Search Danbooru Gallery for tags</string>
    <string name="search_suggestion_description">(%1$s posts, from keyword(s): %2$s)</string>

	 <!-- translators, add your language and name below. -->
	 <!-- for example: -->
	 <!-- <string name="preferences_about_translator">[YOUR_LANGUAGE] Translator</string> -->
	 <!-- <string name="preferences_about_translator_author">[YOUR_NAME] &lt;[YOUR_EMAIL_ADDRESS]&gt;</string> -->
	 <string name="preferences_about_translator">English Translator</string>
	 <string name="preferences_about_translator_author">Victor Tseng &lt;palatis@gmail.com&gt;</string>

</resources>