<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** This file is part of Danbooru Gallery
**
** Copyright 2011
**   - Victor Tseng <palatis@gmail.com>
**
** Danbooru Gallery is free software: you can redistribute it and/or modify
** it under the terms of the GNU General Public License as published by
** the Free Software Foundation, either version 3 of the License, or
** (at your option) any later version.
**
** Danbooru Gallery is distributed in the hope that it will be useful,
** but WITHOUT ANY WARRANTY; without even the implied warranty of
** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
** GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License
** along with Danbooru Gallery.  If not, see <http://www.gnu.org/licenses/>.
**/
-->
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:padding="5dip"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

    <TextView
        android:id="@+id/host_dialog_hosts_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="5dip"
        android:text="@string/preferences_hosts_dialog_host_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/preferences_hosts_dialog_hosts_name_input"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/host_dialog_hosts_name"
        android:padding="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/host_dialog_url"
        android:layout_below="@+id/preferences_hosts_dialog_hosts_name_input"
        android:layout_alignParentLeft="true"
        android:padding="5dip"
        android:text="@string/preferences_hosts_dialog_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/host_dialog_url"
        android:id="@+id/preferences_hosts_dialog_url_input"
        android:text="@string/preferences_hosts_dialog_url_example"
        android:padding="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
